--- a/notebook/electric_vehicles_market_size.ipynb
+++ b/notebook/electric_vehicles_market_size.ipynb
@@ -11,6 +11,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = '../data/Electric_Vehicle_Population_Data.csv'\n",
+    "\n",
+    "ev_data = pd.read_csv(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
