--- a/notebook/electric_vehicles_market_size.ipynb
+++ b/notebook/electric_vehicles_market_size.ipynb
@@ -318,6 +318,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We explore the following to analyze the market size of electric vehicles:\n",
+    "- EV Adoption Over Time: Analyze how the number of EVs has increased each model year.\n",
+    "- Geographical Distribution: Determine the countries and cities where EV registrations are highest.\n",
+    "- EV Types: Dataset breakdown according to kind of electric vehicle (BEV, etc.).\n",
+    "- Make and Model Popularity: List the most popular models and makes among the EVs that are registered.\n",
+    "- Electric Range Analysis: Analyze the electric range of vehicles to gauge the advancement of EV technology.\n",
+    "- Estimated Market Growth: Perform an analysis to determine the estimated growth for the electric vehicle market."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyzing EV Adoption Over Time by visualizing the number of EVs registered by model year."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
