--- a/notebook/electric_vehicles_market_size.ipynb
+++ b/notebook/electric_vehicles_market_size.ipynb
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make and Model Popularity"
+    "Make Popularity"
    ]
   },
   {
