--- a/notebook/electric_vehicles_market_size.ipynb
+++ b/notebook/electric_vehicles_market_size.ipynb
@@ -378,7 +378,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manua\\AppData\\Local\\Temp\\ipykernel_8240\\3102050853.py:4: FutureWarning: \n",
+      "C:\\Users\\manua\\AppData\\Local\\Temp\\ipykernel_12948\\3102050853.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -488,7 +488,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manua\\AppData\\Local\\Temp\\ipykernel_8240\\1636089381.py:5: FutureWarning: \n",
+      "C:\\Users\\manua\\AppData\\Local\\Temp\\ipykernel_12948\\1636089381.py:5: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -535,14 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manua\\AppData\\Local\\Temp\\ipykernel_8240\\3326612369.py:5: FutureWarning: \n",
+      "C:\\Users\\manua\\AppData\\Local\\Temp\\ipykernel_12948\\3326612369.py:5: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -869,6 +869,10 @@
     "# Define a function for exponential growth to fit the data\n",
     "def exp_growth(x, a, b):\n",
     "    return a * np.exp(b * x)\n",
+    "    # x is the input (e.g., years since a starting point).\n",
+    "    # a and b are parameters that will be fitted to the data.\n",
+    "    # np.exp(b * x) computes the exponential growth.\n",
+    "\n",
     "\n",
     "# Prepare the data for curve fitting\n",
     "x_data = filtered_years.index - filtered_years.index.min()\n",
@@ -896,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -931,6 +935,16 @@
     "plt.grid(True)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The graph above shows us the following:\n",
+    "  - Up until about 2010, the number of real EV registrations stayed relatively low and stable. After that, there was a steady and steep rising trend, indicating a notable growth in EV usage.\n",
+    "  - The anticipated EV registrations indicate a strong climb in the number of registrations in the upcoming years, indicating an even more dramatic increase in the near future.\n",
+    "- The growing trend in EV registrations and the forecasted acceleration indicate that the EV market is set to expand significantly. The steep rise in forecasted registrations suggests increasing consumer adoption of EVs, likely to continue. This points to a promising future for the EV industry, with a notable shift in consumer preferences and potential growth in investment and business opportunities."
    ]
   },
   {
